--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -3,6 +3,9 @@
 // You can use Sass (SCSS) here: https://sass-lang.com/
 .container {
   display: flex;
+}
 
-
+.icons {
+  color:black;
+  font-size: 30px;
 }
