--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,12 +1,11 @@
-<div class="container">
-  <h1>Edit task</h1>
-  <%= simple_form_for(@restaurant) do |f| %>
-    <%= f.label :title %>
-    <%= f.text_field :title %>
-    <%= f.label :details %>
-    <%= f.text_field :details %>
+<div class="container justify-content-center col-6 d-block">
+
+    <h1>Edit task</h1>
+  <%= simple_form_for(@task) do |f| %>
+    <%= f.input :title %>
+    <%= f.input :details %>
     <%= f.submit %>
   <% end %>
-
   <%= link_to "Back to list", tasks_path  %>
+
 </div>
