--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container justify-content-center col-6 d-block">
   <h1>My tasks</h1>
   <% @tasks.each do |task| %>
 
