--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,11 +1,9 @@
-<div class="container">
+<div class="container justify-content-center col-6 d-block">
   <h1>New task</h1>
 
   <%= simple_form_for(@task) do |f| %>
-    <%= f.label :title %>
-    <%= f.text_field :title %>
-    <%= f.label :details %>
-    <%= f.text_field :details %>
+    <%= f.input :title %>
+    <%= f.input :details %>
     <%= f.submit %>
   <% end %>
 
